# Rust-RTX

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  test.txt
.cargo/: config.toml
src/: aabb.rs  camera.rs  color.rs  hittable.rs  main.rs  material.rs  rand_double.rs  ray.rs  utils.rs  vec3.rs
src/hittables/: bvh_node.rs  mod.rs  sphere.rs  triangle.rs
src/mats/: debug_front.rs  dielectric.rs  diffuse_light.rs  lambertian.rs  metal.rs  mod.rs
src/scenes/: cornell_box.rs  dof_spheres_glass.rs  mod.rs  random_spheres.rs
