[package]
name = "terminal_rtx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
rand = { version = "0.8.5", features = ["small_rng"] }
indicatif = "0.17.3"
rayon = "1.7.0"
capture-it = "0.4.1"
num_cpus = "1.15.0"
rand_chacha = "0.3.1"
pad = "0.1.6"
parking_lot = "0.12.1"
jemallocator = "0.5.0"

[profile.dev]
opt-level = 3
debug = 1

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
panic = 'abort'

